fixed various sizing bugs on mobile

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -73,10 +73,10 @@ app-game-of-life-canvas {
   }
 
   .about-me-section {
-    width: 95%;
+    width: 90%;
   }
 
   .projects-section {
-    width: 95%;
+    width: 90%;
   }
 }
